...
    super.dispose();
  }

  @override
  Widget build(BuildContext context) {
    return ChangeNotifierProvider(
      create: (context) => shelfDetailBloc,
      child: Selector<ShelfDetailBloc, ShelfVO?>(
        selector: (BuildContext context, bloc) => bloc.shelf,
        builder: (BuildContext context, shelfDetail, Widget? chile) {
          return Scaffold(
            appBar: AppBar(
              elevation: 0.0,
...
                                          userInput.text.toString());
                                      Navigator.pop(context);
                                    },
                                    child: const Icon(
                                      Icons.check,
                                      color: Colors.blue,
                                      key: ValueKey("renameDone"),
                                    ),
                                  ),
                                  TextField(
                                    key: const ValueKey("renameInput"),
                                    controller: userInput,
                                    focusNode: inputFocus,
                                    autofocus: true,
                                    decoration: const InputDecoration(
                                        hintText: "Shelf name"),
                                    keyboardType: TextInputType.text,
...
                title: const Text('Delete from library'),
                onTap: () {
                  Navigator.pop(context);
                },
              ),
              ListTile(
                key: const ValueKey("add"),
                contentPadding: const EdgeInsets.all(0.0),
                minLeadingWidth: 5.0,
                minVerticalPadding: 0.0,
                leading: const Icon(Icons.add),
                title: const Text('Add to shelf'),
                onTap: () {
...
                  color: Colors.grey,
                ),
              ),
              onPressed: () => Navigator.pop(context),
            ),
            TextButton(
              key: const ValueKey("yes"),
              child: const Text(
                "Yes",
                style: TextStyle(
                  fontSize: 18.0,
                  fontWeight: FontWeight.bold,
                  color: Colors.blue,
...
